...
                            viewModel.didTapRow(coinID: coin.id)
                        }
                }
            }
            .padding()
        }
        .accessibilityIdentifier("coinList.list")
    }

    private var emptyStateView: some View {
        VStack {
            CustomTextView(text: "No coins available.", fontType: .regular)
        }
...
