...
                        .padding(.bottom, 16)
                }
                .padding(.horizontal, 24)
            }
        }
        .padding(EdgeInsets(top: 24, leading: 24, bottom: 36, trailing: 24))
        .accessibilityIdentifier("coinDetails.card")
    }
}

